@@ -395,6 +395,7 @@ class LogEventsList {
 		} else {
 			$out->addWikiMsg( 'logempty' );
 		}
+		return $pager->getNumRows();
 	}
 
 	 /**
