@@ -207,6 +207,7 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
 * (bug 15598) Special:Newpages default limit uses user preference for recentchanges
   limit instead of hardcoded 50.
 * (bug 15617) $wgFeedClassesOutputPage::getHeadLinks() respects $wgFeedClasses, instead of hardcoding rss and atom. Patch by Juliano F. Ravasi. 
+* (bug 14638) Special:Blockip now provides a link to the block log if the user has been blocked more than 10 times. Patch by Matt Johnston.
 
 === API changes in 1.14 ===
 
